Fixed navigate from past match details page + z-index in mobile header

--- a/betting app front/assets/sass/layout/_header.scss
+++ b/betting app front/assets/sass/layout/_header.scss
@@ -10,8 +10,8 @@
 .header-nav a {
 	margin: 0 1rem;
 	text-decoration: none;
-    color: $color-white;
-    font-size: 1.6rem;
+	color: $color-white;
+	font-size: 1.6rem;
 }
 
 .header-nav a:hover {
@@ -24,7 +24,7 @@
 	background: transparent;
 	border: none;
 	outline: none;
-    color: $color-white;
+	color: $color-white;
 	visibility: hidden;
 	opacity: 0;
 	font-size: 1.8rem;
@@ -55,6 +55,7 @@
 		gap: 1.5rem;
 		background-color: $p2;
 		transition: 1s;
+		z-index: 1000;
 	}
 
 	.app-header .responsive_nav {
